--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -13,6 +13,8 @@ RUN npm install
 FROM node:21-alpine3.19 as builder
 ARG ORDER_DATABASE_URL
 ENV DATABASE_URL=$ORDER_DATABASE_URL
+RUN echo "database_url ::: ORDER_DATABASE_URL";
+
 WORKDIR /usr/src/app
 
 #copy node modules
