--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -13,7 +13,7 @@ RUN npm install
 FROM node:21-alpine3.19 as builder
 ARG ORDER_DATABASE_URL
 ENV DATABASE_URL=$ORDER_DATABASE_URL
-RUN echo "database_url ::: ORDER_DATABASE_URL";
+RUN echo "database_url ::: $ORDER_DATABASE_URL";
 
 WORKDIR /usr/src/app
 
